--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,14 +13,14 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 # 1. Key Bindings {{{
 # ===================
 
-# Key combination prefix is <C-a>, not <C-b>
-set-option -g prefix C-a
+# Key combination prefix is <C-s>, not <C-b>
+set-option -g prefix C-s
 unbind-key C-b
 
-# use <C-a><C-a> to switch window,
-# and <C-a>a to control nested sessions
-bind-key C-a last-window
-bind-key a send-prefix
+# use <C-s><C-s> to switch window,
+# and <C-s>s to control nested sessions
+bind-key C-s last-window
+bind-key s send-prefix
 
 # enable vi-mode
 setw -g mode-keys vi
@@ -79,7 +79,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key q display-panes
 
-bind-key C-a last-window
+bind-key C-s last-window
 bind-key c new-window
 bind-key t next-window
 bind-key T previous-window
