tmux.conf change resurrect bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -279,6 +279,11 @@ set -g @copycat_prev 'n'
 set -g @extrakto_split_size "12"
 
 
+# change tmux-resurrect bindings·
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
+
 # Enable plugins
 run-shell '~/.tmux/plugins/tpm/tpm'
 # }}}
