--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -278,6 +278,10 @@ set -g @copycat_prev 'n'
 # extrakto
 set -g @extrakto_split_size "12"
 
+# change tmux-resurrect bindings 
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
 
 # Enable plugins
 run-shell '~/.tmux/plugins/tpm/tpm'
